# data-ingestion-mongodb

./: .env.example  README.md  data-ingestion.ipynb  main.py  pyproject.toml
Notes/: a-Introduction.md
part-01/: loader.py  openai_.py  processings.py  test.py  vectorstore.py
