[project]
name = "data-ingestion-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "openai>=2.37.0",
    "pdfplumber>=0.11.9",
    "pymongo>=4.17.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
]
